--- a/Homework_5.ipynb
+++ b/Homework_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmtw7ccvi0c20xTs6K7IbB",
+      "authorship_tag": "ABX9TyNXc+4L+gkal5R9ktAX+c41",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**What is tokenization?**"
+        "**What is tokenization?**\n",
+        "\n",
+        "This is the process where a text is broken into smaller parts -> tokens. These tokens can be words or even characters. Especially for text classification or translation this process is used. \n",
+        "\n",
+        "When an input is tokanized, it is possible for the model to process the information and actually do work with it. Furthermore whitespaces are eliminated."
       ],
       "metadata": {
         "id": "tRwLGj-rHG8r"
