--- a/Homework_5.ipynb
+++ b/Homework_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXc+4L+gkal5R9ktAX+c41",
+      "authorship_tag": "ABX9TyOOa8RuzwuMLxKRVtl5XDSH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Loris997/Assignments-Loris-Widmer/blob/main/Homework_5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Theory part** "
+      ],
+      "metadata": {
+        "id": "daTPlPprv9Hn"
+      }
     },
     {
       "cell_type": "markdown",
